<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/score_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="176dp"
        android:text="@string/quizScoreTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/you_scored_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quizScoreYou"
        app:layout_constraintTop_toBottomOf="@+id/score_title_view"
        tools:layout_editor_absoluteX="163dp" />

    <TextView
        android:id="@+id/user_score_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quizScore"
        app:layout_constraintTop_toBottomOf="@+id/you_scored_view"
        tools:layout_editor_absoluteX="171dp" />

    <TextView
        android:id="@+id/out_of_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quizScoreOutOf"
        app:layout_constraintTop_toBottomOf="@+id/user_score_view"
        tools:layout_editor_absoluteX="179dp" />

    <Button
        android:id="@+id/score_finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quizScoreFinishButton"
        app:layout_constraintTop_toBottomOf="@+id/max_score_view"
        tools:layout_editor_absoluteX="161dp" />

    <TextView
        android:id="@+id/max_score_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quizScoreMax"
        app:layout_constraintTop_toBottomOf="@+id/out_of_view"
        tools:layout_editor_absoluteX="172dp" />
</androidx.constraintlayout.widget.ConstraintLayout>