<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/exit_quiz_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:text="@string/exitQuizDialog"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="137dp" />

    <Button
        android:id="@+id/exit_quiz_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="80dp"
        android:text="@string/exitQuizButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exit_quiz_dialog" />

    <Button
        android:id="@+id/cancel_exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="36dp"
        android:text="@string/cancelExitButton"
        app:layout_constraintEnd_toStartOf="@+id/exit_quiz_button"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exit_quiz_dialog" />
</androidx.constraintlayout.widget.ConstraintLayout>